--- a/style.css
+++ b/style.css
@@ -81,11 +81,13 @@ hr{
     grid-template-rows: repeat(2,1fr);
 }
 #grid-container{
+    margin-top: .5rem;
     display:grid;
     border: 2px solid black;
     min-height: 10rem;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,1fr);
+    grid-gap: 1rem;
 }
 .bottomcontainer h4{
     font-size: 1.5rem;
